--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -37,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#we use this a lot :D\n",
@@ -81,6 +83,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -137,6 +140,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -211,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.boxplot([treated_salary, untreated_salary], labels=['treated', 'untreated'], showfliers=False)\n",
@@ -285,7 +291,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "black_u, black_t = percentages['black']\n",
@@ -298,7 +306,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "u_race_rates = [black_u, hispan_u, white_u]\n",
@@ -310,7 +320,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "drawPies(u_race_rates, t_race_rates, race_labels, 'Racial groups in percent by treatment')"
@@ -335,7 +347,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "degree_u, degree_t = percentages['nodegree']"
@@ -344,7 +358,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#calculate rate for degree havers in treated and untreated group\n",
@@ -356,7 +372,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#draw pie diagram\n",
@@ -381,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#married and unmarried by treatment\n",
@@ -392,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "u_marriage_rates = [married_u, not_married_u]\n",
@@ -403,7 +425,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "drawPies(u_marriage_rates, t_marriage_rates, mariage_labels, 'Percentage of married individuals by treatment')"
@@ -428,7 +452,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#defining list of non binary variables\n",
@@ -488,6 +514,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -613,6 +640,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -750,6 +778,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -806,6 +835,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -843,7 +873,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prop_table.head()"
@@ -890,6 +922,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -918,7 +951,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Example matches:')\n",
@@ -928,7 +963,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#get matching\n",
@@ -1076,7 +1113,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "matched['match'] = matched['id'].map(matching_dict)\n",
@@ -1089,7 +1128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#matches that are black/white missmatched and have a large difference in propensity scores\n",
@@ -1128,7 +1169,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#matches that are black/white missmatched and have a large difference in propensity scores\n",
@@ -1190,7 +1233,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.boxplot([balanced_match['re78_x'], balanced_match['re78_y']], showfliers=False)\n",
@@ -1325,8 +1370,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# need to find estimators and depth first. We use random_state to have a seed again.\n",
-    "clf = RandomForestClassifier(n_estimators=100, max_depth=25, random_state=1)\n",
+    "# need to find estimators and depth first.\n",
+    "clf = RandomForestClassifier(n_estimators=100, max_depth=25)\n",
     "clf.fit(vect_train, newsgroups_train)\n",
     "pred = clf.predict(vect_valid)\n",
     "metrics.f1_score(newsgroups_valid, pred, average='macro')"
@@ -1335,9 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "metrics.accuracy_score(pred, newsgroups_valid)"
@@ -1364,8 +1407,19 @@
    },
    "outputs": [],
    "source": [
-    "# We create a DF to be able to use all this data effectively\n",
-    "columns=['Depth', 'Estimators', 'Prediction']"
+    "def calcPredictions():\n",
+    "    rows = []\n",
+    "    # We made a few tries already to determine which values yield better results.\n",
+    "    # We have a double for loop. Which is aweful and will take a lot of time, but necessary.\n",
+    "    for i in range(30, 160, 10): #making sure the depth is not better above 30\n",
+    "        for j in range(300, 1100, 100): #step of 100 to not take too much time\n",
+    "            clf = RandomForestClassifier(n_estimators=j, max_depth=i)\n",
+    "            clf.fit(vect_train, newsgroups_train)\n",
+    "            pred = clf.predict(vect_valid)\n",
+    "            pred_result = metrics.accuracy_score(newsgroups_valid, pred)\n",
+    "            # uncomment next line to be able to know where computation is at\n",
+    "            print(i,\" ; \", j)\n",
+    "            rows.append([i, j, pred_result])"
    ]
   },
   {
@@ -1376,57 +1430,14 @@
    },
    "outputs": [],
    "source": [
-    "rows = []\n",
-    "# We made a few tries already to determine which values yield better results.\n",
-    "# We have a double for loop. Which is aweful and will take a lot of time, but necessary.\n",
-    "for i in range(30, 160, 10): #making sure the depth is not better above 30\n",
-    "    for j in range(300, 1100, 100): #step of 100 to not take too much time\n",
-    "        clf = RandomForestClassifier(n_estimators=j, max_depth=i)\n",
-    "        clf.fit(vect_train, newsgroups_train)\n",
-    "        pred = clf.predict(vect_valid)\n",
-    "        pred_result = metrics.accuracy_score(newsgroups_valid, pred)\n",
-    "        # uncomment next line to be able to know where computation is at\n",
-    "        print(i,\" ; \", j)\n",
-    "        rows.append([i, j, pred_result])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "clf = RandomForestClassifier(n_estimators=400, max_depth=100, random_state=0)\n",
-    "clf.fit(vect_train, newsgroups_train)\n",
-    "pred = clf.predict(vect_valid)\n",
-    "metrics.accuracy_score(newsgroups_valid, pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf = RandomForestClassifier(n_estimators=200, max_depth=200, random_state=0)\n",
-    "clf.fit(vect_train, newsgroups_train)\n",
-    "pred = clf.predict(vect_valid)\n",
-    "metrics.accuracy_score(newsgroups_valid, pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_predictions = pd.DataFrame(rows, columns=columns) # we get all the predictions in a dataframe\n",
-    "# we sort by best prediction\n",
-    "all_predictions = all_predictions.sort_values(by=['Prediction'], ascending=False)\n",
-    "# we show the best 10\n",
-    "all_predictions.head(5)"
+    "def createDF():\n",
+    "    # We create a DF to be able to use all this data effectively\n",
+    "    columns=['Depth', 'Estimators', 'Prediction']\n",
+    "    all_predictions = pd.DataFrame(rows, columns=columns) # we get all the predictions in a dataframe\n",
+    "    # we sort by best prediction\n",
+    "    all_predictions = all_predictions.sort_values(by=['Prediction'], ascending=False)\n",
+    "    # we show the best 10\n",
+    "    all_predictions.head(5)"
    ]
   },
   {
@@ -1438,59 +1449,66 @@
     "# Saving the pickle. Do not run if we did not make a new pandas.\n",
     "# all_predictions.to_pickle(\"all_predictions.pkl\")\n",
     "# read the pickle.\n",
-    "# all_predictions = pd.read_pickle(\"all_predictions.pkl\")"
+    "all_predictions = pd.read_pickle(\"all_predictions.pkl\")\n",
+    "all_predictions.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "90 \t800 \t0.680106\n",
+    "As we can see, te best resuts are when *n_estimators* is set around 700 and *max_depth* is set at 130. Note that because we have a bit of randomness, the results are not deterministic.\n",
     "\n",
-    "90 \t900 \t0.679576\n",
-    "\n",
-    "90 \t500 \t0.678515"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As we can see, te best resuts are when *n_estimators* is set around 800 to 900 and *max_depth* is set around 47. Note that because we have a bit of randomness, the results are not deterministic.\n",
-    "\n",
-    "Now, we use thos numbers to create a random forest and train it:"
+    "You can also note that, while a lot of people had around 0.80 precision, we have only 0.69 precision. This is because we have taken out all metadata, as asked for by the tutorial on sklearn. Thus, we have more realistic predictions and results. To show this, let us compare predictions with and without metadata:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "clf = RandomForestClassifier(n_estimators=800, max_depth=47, random_state=1)\n",
+    "# without metadata\n",
+    "clf = RandomForestClassifier(n_estimators=700, max_depth=130)\n",
     "clf.fit(vect_train, newsgroups_train)\n",
     "pred = clf.predict(vect_valid)\n",
-    "metrics.f1_score(newsgroups_valid, pred, average='macro')"
+    "metrics.accuracy_score(newsgroups_valid, pred)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "metrics.accuracy_score(pred, newsgroups_valid)"
+    "# with metadata\n",
+    "newsgroups_all_meta = fetch_20newsgroups(subset='all')\n",
+    "vectors_meta = tfidf.fit_transform(newsgroups_all_meta.data)\n",
+    "newsgroups_train_meta, newsgroups_inter_meta, vect_train_meta, vect_inter_meta = \\\n",
+    "    train_test_split(newsgroups_all_meta.target, vectors_meta, test_size=0.2, random_state=1)\n",
+    "\n",
+    "\n",
+    "newsgroups_test_meta, newsgroups_valid_meta, vect_test_meta, vect_valid_meta = \\\n",
+    "    train_test_split(newsgroups_inter_meta, vect_inter_meta, test_size=0.5, random_state=1)\n",
+    "    \n",
+    "clf_meta = RandomForestClassifier(n_estimators=700, max_depth=130)\n",
+    "clf_meta.fit(vect_train_meta, newsgroups_train_meta)\n",
+    "pred_meta = clf_meta.predict(vect_valid_meta)\n",
+    "metrics.accuracy_score(newsgroups_valid_meta, pred_meta)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we do a confusion matrix on the test set."
+    "As we can see, we have 86% accuracy with metadata, and only 68% without. We will keep the version without metadata to have more realistic results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let us do a confusion matrix on the test set."
    ]
   },
   {
@@ -1501,7 +1519,7 @@
    },
    "outputs": [],
    "source": [
-    "pred_test = clf.predict(vect_valid)\n",
+    "pred_test = clf.predict(vect_test)\n",
     "cm = metrics.confusion_matrix(newsgroups_test, pred_test)\n",
     "#normalize the matrix\n",
     "cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]"
@@ -1517,9 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(cm)\n",
@@ -1527,6 +1543,15 @@
     "df.index = newsgroups_all.target_names\n",
     "plt.figure(figsize=(10, 6))\n",
     "ax = sns.heatmap(df, cmap='OrRd')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that we mostly have a tendence to say something is not part of a group when it is, instead of wrongly assigning a group (check if my thinking is correct).\n",
+    "\n",
+    "There are a lot fewer missclassifications between groups, but a lot more within groups, compared to 2.\n"
    ]
   },
   {
@@ -1569,6 +1594,13 @@
     "plt.yscale('log')\n",
     "plt.xlabel('Feature importance')\n",
     "plt.ylabel('Number of features (log)');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that very few features are very important, while most are not usefull for prediction."
    ]
   }
  ],
