Properly reading into data frame, first analyses

--- a/project/JSON Exploration.ipynb
+++ b/project/JSON Exploration.ipynb
@@ -3,47 +3,215 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pyspark as ps"
+    "import pyspark as ps\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we preform an exploration of the partial Spinn3r dataset provided.\n",
+    "\n",
+    "We first find how to explore the data using one sampel json file:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "example = pd.read_json('swiss-tweet/example.json', orient='slip')\n",
+    "EXAMPLE_PATH = 'swiss-tweet/example.json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example = pd.read_json(EXAMPLE_PATH)\n",
     "example.columns"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print(example['_source'][0])"
+    "We note that the data we are interessted in is contained in the _source variable, in object format:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "example.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The object format is a nested json that we could not find how to extract dirrectly using the read json funtion provided. We thus use a json normaliter contained in the pandas libary to extract it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas.io.json import json_normalize\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We set max dispaly columns to a larger number in able to see all columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_columns', 58)\n",
+    "example1 = json_normalize(example._source[0])\n",
+    "print(example1.columns)\n",
+    "print(len(example1.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(example1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the spinner documentation we see that:\n",
+    "\n",
+    "The values we are most interessted in:\n",
+    " - main: content of tweet\n",
+    " - sentiment: overal sentiment of tweet\n",
+    " - author_gender: gender of author\n",
+    " - source_location: to know where was posted\n",
+    " - lang: to get the language of the tweet\n",
+    " - source_created: to know when it was made\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This brings us the the first things we need to be careful about:\n",
+    " - what does the sentiment realy say about the tweet?\n",
+    " - is the location accurate?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionaly, after some trying around we find that the inbuilt read_json function was not ideal for or pourposed. We thus open the file using 'open' and transform it into a dataframe using json_normalize. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(EXAMPLE_PATH\n",
+    "         ) as data_file:    \n",
+    "    data = json.load(data_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#example of how data looks like, for first tweet\n",
+    "data[0]['_source']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df = json_normalize(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nicer naming\n",
+    "twitter_df.columns = [ column.replace('_source.','') for column in twitter_df.columns]\n",
+    "print(twitter_df.columns)\n",
+    "print(twitter_df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "language_freq = twitter_df['lang'].value_counts()\n",
+    "language_freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gender_freq = twitter_df['author_gender'].value_counts()\n",
+    "gender_freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(twitter_df.main_length, bins=50)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -63,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
