--- a/project/JSON Exploration.ipynb
+++ b/project/JSON Exploration.ipynb
@@ -382,6 +382,107 @@
    "source": [
     "twitter_df['source_likes'].value_counts() #no facebook likes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df.drop(twitter_df['lang'] == 'und')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df.iloc[-11:, 3:]['main']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "don't forget to remove all links\n",
+    "check for swiss german! (some do get into dutch but not that many)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#remove all languages we don't care about\n",
+    "mask = (twitter_df['lang'] != 'de') & (twitter_df['lang'] != 'fr') & (twitter_df['lang'] != 'en')\n",
+    "twitter_df.drop(twitter_df[mask].index, inplace=True)\n",
+    "twitter_df.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df[twitter_df['sentiment'] == 'NEGATIVE']['lang'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df[twitter_df['main'].map(lambda x: 'therap' in x) ]['main'] ##issue of adds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df[twitter_df['main'].map(lambda x: 'suic' in x) ]['main'] #issue of news"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df.iloc[2105, :]['main'] #example depression tweet that was not recognized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df.iloc[14146, :]['main']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df.iloc[11539, :]['main'] #again, neutral when this is negative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df.iloc[1128, :]['main'] #we should remove if news"
+   ]
   }
  ],
  "metadata": {
